fix things on smallest viewport+slider button

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,8 +4,8 @@ footer {
 
   img {
     margin-top: 30px;
-    min-width: 250px;
-    max-width: 320px;
+    max-width: 247px;
+    min-width: 220px;
   }
 }
 
@@ -22,7 +22,7 @@ footer {
   a {
     background-color: $ebony;
     margin: 5px;
-    padding: 15px 40px;
+    padding: 15px 28px;
   }
   a:nth-child(1):hover {
   background-color: $facebook;
