--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -136,7 +136,7 @@ button .fa-phone-volume {
   display: flex;
   position: relative;
   overflow: hidden;
-  width: calc(100% - 33px);
+  width: calc(100% - 16px);
   height: 45px;
   margin-bottom: 20px;
   border: 1px solid $border;
