--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -37,7 +37,7 @@
     font-size: .8em;
     line-height: 1.8em;
     margin: -10px 30px;
-    padding-bottom: 85px;
+    padding-bottom: 110px;
   }
   a {
 
